Added residual bottleneck to the cnn architecture

--- a/SkipConn.ipynb
+++ b/SkipConn.ipynb
@@ -329,9 +329,115 @@
    ]
   },
   {
+   "attachments": {},
    "cell_type": "markdown",
    "metadata": {},
-   "source": []
+   "source": [
+    "We also need a way to handle different numbers of channels after we do pooling. "
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "That's what residual bottlenecks are for"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class ResidualBottleNeck(nn.Module):\n",
+    "    def __init__(self, in_channels, out_channels, kernel_size=3, leak_rate=0.1):\n",
+    "        super().__init__()\n",
+    "        #how much padding will our convolutional layers need to maintain the input shape\n",
+    "        pad = (kernel_size-1)//2\n",
+    "        #The botteneck should be smaller, so output/4 or input. You could also try changing max to min, its not a major issue. \n",
+    "        bottleneck = max(out_channels//4, in_channels)\n",
+    "        #Define the three sets of BN and convolution layers we need. \n",
+    "        #Notice that for the 1x1 convs we use padding=0, because 1x1 will not change shape! \n",
+    "        self.F = nn.Sequential(\n",
+    "            #Compress down\n",
+    "            nn.BatchNorm2d(in_channels),\n",
+    "            nn.LeakyReLU(leak_rate),\n",
+    "            nn.Conv2d(in_channels, bottleneck, 1, padding=0),\n",
+    "            #Normal layer doing a full conv\n",
+    "            nn.BatchNorm2d(bottleneck),\n",
+    "            nn.LeakyReLU(leak_rate),\n",
+    "            nn.Conv2d(bottleneck, bottleneck, kernel_size, padding=pad),\n",
+    "            #Expand back up\n",
+    "            nn.BatchNorm2d(bottleneck),\n",
+    "            nn.LeakyReLU(leak_rate),\n",
+    "            nn.Conv2d(bottleneck, out_channels, 1, padding=0)\n",
+    "        )\n",
+    "\n",
+    "        #By default, our shortcut will be the identiy function - which simply returns the input as the output\n",
+    "        self.shortcut = nn.Identity()\n",
+    "        #If we need to change the shape, then lets turn the shortcut into a small layer with 1x1 conv and BM\n",
+    "        if in_channels != out_channels:\n",
+    "            self.shortcut =  nn.Sequential(\n",
+    "                    nn.Conv2d(in_channels, out_channels, 1, padding=0), \n",
+    "                    nn.BatchNorm2d(out_channels)\n",
+    "                )\n",
+    "\n",
+    "    def forward(self, x):\n",
+    "        # shortcut(x) plays the role of \"x\", do as little work as possible to keep the tensor shapes the same.\n",
+    "        return self.shortcut(x) + self.F(x) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_res_model = nn.Sequential(\n",
+    "    ResidualBottleNeck(C, n_filters), #BottleNeck to start because we need more channels. Its also common to start with just one normal hidden layer before starting residual blocks. \n",
+    "    nn.LeakyReLU(leak_rate), #We are inserting a activation after each residual. This is optional. \n",
+    "    ResidualBlockE(n_filters),\n",
+    "    nn.LeakyReLU(leak_rate),\n",
+    "    nn.MaxPool2d((2,2)),\n",
+    "    ResidualBottleNeck(n_filters, 2*n_filters),\n",
+    "    nn.LeakyReLU(leak_rate),\n",
+    "    ResidualBlockE(2*n_filters),\n",
+    "    nn.LeakyReLU(leak_rate),\n",
+    "    nn.MaxPool2d((2,2)),\n",
+    "    ResidualBottleNeck(2*n_filters, 4*n_filters),\n",
+    "    nn.LeakyReLU(leak_rate),\n",
+    "    ResidualBlockE(4*n_filters),\n",
+    "    nn.LeakyReLU(leak_rate),\n",
+    "    nn.Flatten(),\n",
+    "    nn.Linear(D*n_filters//4, classes),\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "cnn_res_results = idlmam.train_network(cnn_res_model, \n",
+    "                                loss_func, \n",
+    "                                train_loader, \n",
+    "                                test_loader=test_loader, \n",
+    "                                epochs=10, \n",
+    "                                score_funcs={'Accuracy': accuracy_score}, device=device)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "sns.lineplot(x='epoch', y='test Accuracy', \n",
+    "             data=cnn_res_results, \n",
+    "             label='CNN-ReLU-BN-Res')"
+   ]
   }
  ],
  "metadata": {
