--- a/Autoencoding_SelfSupervision.ipynb
+++ b/Autoencoding_SelfSupervision.ipynb
@@ -46,10 +46,82 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 3,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "D = 28 * 28\n",
+    "n = 2 \n",
+    "C = 1 \n",
+    "classes = 10 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class TransposeLinear(nn.Module):                    \n",
+    "    def __init__(self, linearLayer, bias=True):\n",
+    "\n",
+    "        \"\"\" \n",
+    "        linearLayer: is the layer that we want to use the transpose of to \n",
+    "        ➥ produce the output of this layer. So the Linear layer represents \n",
+    "        ➥ W, and this layer represents W^T. This is accomplished via \n",
+    "        ➥ weight sharing by reusing the weights of linearLayer \n",
+    "        bias: if True, we will create a new bias term b that is learned \n",
+    "        separately from what is in \n",
+    "        linearLayer. If false, we will not use any bias vector. \n",
+    "        \"\"\" \n",
+    "\n",
+    "        super().__init__() \n",
+    "        self.weight = linearLayer.weight                \n",
+    "\n",
+    "        if bias: \n",
+    "            self.bias = nn.Parameter(torch.Tensor(\n",
+    "                                    linearLayer.weight.shape[1]))           \n",
+    "\n",
+    "\n",
+    "        else:\n",
+    "            self.register_parameter('bias', None)      \n",
+    "\n",
+    "\n",
+    "    def forward(self, x):                              \n",
+    "        return F.linear(x, self.weight.t(), self.bias) "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "linearLayer = nn.Linear(D, n, bias=False)\n",
+    "\n",
+    "pca_encoder = nn.Sequential(\n",
+    "    nn.Flatten(), linearLayer,\n",
+    ")\n",
+    "\n",
+    "pca_decoder = nn.Sequential(\n",
+    "    TransposeLinear(linearLayer, bias=False),\n",
+    "    idlmam.View((-1, 1, 28, 28)),\n",
+    ")\n",
+    "\n",
+    "pca_model = nn.Sequential(\n",
+    "    pca_encoder, \n",
+    "    pca_decoder\n",
+    ")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "nn.init.orthogonal_(linearLayer.weight)"
+   ]
   }
  ],
  "metadata": {
