Ingesting data, ready to train pca - nn

--- a/Autoencoding_SelfSupervision.ipynb
+++ b/Autoencoding_SelfSupervision.ipynb
@@ -115,6 +115,14 @@
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "To make it truly PCA, we need to add the WW⊤ = I constraint, orthogonality. "
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
