--- a/Autoencoding_SelfSupervision.ipynb
+++ b/Autoencoding_SelfSupervision.ipynb
@@ -1388,7 +1388,17 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def getLayer(in_size, out_size): \n",
+    "    \"\"\" \n",
+    "    in_size: how many neurons/features are coming into this layer \n",
+    "    out_size: how many neurons/outputs this hidden layer should produce \n",
+    "    \"\"\" \n",
+    "    return nn.Sequential( \n",
+    "        nn.Linear(in_size, out_size), \n",
+    "        nn.BatchNorm1d(out_size), \n",
+    "        nn.ReLU())"
+   ]
   }
  ],
  "metadata": {
