Ingesting data for image segmentation

--- a/Object_Detection.ipynb
+++ b/Object_Detection.ipynb
@@ -5,20 +5,90 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "This notebook touches upon: \n",
+    "\n",
+    "* Making a prediction for every pixel\n",
+    "* Working with image segmentation\n",
+    "* Enlarging images with transposed convolutions\n",
+    "* Using bounding boxes for object detection with Faster R-CNN\n",
+    "* Filtering results to reduce false positives"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "U-Net that has become a de facto design approach for image segmentation."
    ]
   },
   {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Image segmentation -> Classification problem, but instead of classifying the whole image, we classify every pixel. So a 200 × 200 image will have 200 × 200 = 40,000 classifications."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "import torch\n",
+    "import torch.nn as nn\n",
+    "import torch.nn.functional as F\n",
+    "import torchvision \n",
+    "from torchvision.models.detection import FasterRCNN\n",
+    "from torchvision.models.detection.rpn import AnchorGenerator\n",
+    "from torchvision import transforms\n",
+    "\n",
+    "\n",
+    "from torch.utils.data import Dataset, DataLoader\n",
+    "\n",
+    "from tqdm.autonotebook import tqdm\n",
+    "\n",
+    "\n",
+    "\n",
+    "import os\n",
+    "from imageio import imread\n",
+    "from glob import glob\n",
+    "import json\n",
+    "\n",
+    "import numpy as np\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "from matplotlib.pyplot import imshow\n",
+    "\n",
+    "import pandas as pd\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "\n",
+    "import time\n",
+    "\n",
+    "from idlmam import set_seed\n",
+    "from idlmam import train_network, Flatten, View, weight_reset, moveTo"
+   ]
   }
  ],
  "metadata": {
+  "kernelspec": {
+   "display_name": "Python 3",
+   "language": "python",
+   "name": "python3"
+  },
   "language_info": {
-   "name": "python"
+   "codemirror_mode": {
+    "name": "ipython",
+    "version": 3
+   },
+   "file_extension": ".py",
+   "mimetype": "text/x-python",
+   "name": "python",
+   "nbconvert_exporter": "python",
+   "pygments_lexer": "ipython3",
+   "version": "3.9.12"
   },
   "orig_nbformat": 4
  },
