--- a/Object_Detection.ipynb
+++ b/Object_Detection.ipynb
@@ -1190,9 +1190,401 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 21,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "class UNetBlock2d(nn.Module): #Our class extends nn.Module, all PyTorch layers must extend this \n",
+    "    def __init__(self, in_channels, mid_channels, out_channels=None, layers=1, sub_network=None, filter_size=3):\n",
+    "        \"\"\" \n",
+    "        in_channels: the number of channels in the input to this block\n",
+    "        mid_channels: the number of channels to have as the output for each convolutional filter\n",
+    "        out_channels: if not `None`, ends the network with a 1x1 convolution to convert the number of output channels to a specific number. \n",
+    "        layers: how many blocks of hidden layers to create on both the input and output side of a U-Net block\n",
+    "        sub_network: the network to apply after shrinking the input by a factor of 2 using max pooling. The number of output channels should be equal to `mid_channels`\n",
+    "        filter_size: how large the convolutional filters should be\n",
+    "        \"\"\"\n",
+    "        super().__init__()\n",
+    "        \n",
+    "        #Start preparing the layers used to process the input\n",
+    "        in_layers = [cnnLayer(in_channels, mid_channels, filter_size)]\n",
+    "        \n",
+    "        #If we have a sub-network, we will double the number of inputs to the output. So lets figure that out now\n",
+    "        if sub_network is None:\n",
+    "            inputs_to_outputs = 1\n",
+    "        else:\n",
+    "            inputs_to_outputs = 2\n",
+    "\n",
+    "        #Preparing the layers used to make the final output, which has extra input channels from any sub-network\n",
+    "        out_layers = [ cnnLayer(mid_channels*inputs_to_outputs, mid_channels, filter_size)]\n",
+    "        \n",
+    "        #Make the additional hidden layers used for the input and output\n",
+    "        for _ in range(layers-1):\n",
+    "            in_layers.append(cnnLayer(mid_channels, mid_channels, filter_size))\n",
+    "            out_layers.append(cnnLayer(mid_channels, mid_channels, filter_size))\n",
+    "        #Use 1x1 Convolutions to ensure a specific output size\n",
+    "        if out_channels is not None:\n",
+    "            out_layers.append(nn.Conv2d(mid_channels, out_channels, 1, padding=0))\n",
+    "    \n",
+    "        #define our three total sub-networks:\n",
+    "        #1) in_model performs the intial rounds of convolution\n",
+    "        self.in_model = nn.Sequential(*in_layers)\n",
+    "        #2) our subnetwork works on the max-pooled result. We will add the pooling and up-scaling directly into the sub-model\n",
+    "        if sub_network is not None:\n",
+    "            self.bottleneck = nn.Sequential(\n",
+    "                nn.MaxPool2d(2), #Shrink\n",
+    "                sub_network, #process the smaller resolution\n",
+    "                #expand back up\n",
+    "                nn.ConvTranspose2d(mid_channels, mid_channels, filter_size, padding=filter_size//2, output_padding=1, stride=2)\n",
+    "            )\n",
+    "        else:\n",
+    "            self.bottleneck = None\n",
+    "        #3) the output model that processes the concatinated result, or just the output from in_model if no sub-network was given\n",
+    "        self.out_model = nn.Sequential(*out_layers)\n",
+    "\n",
+    "    #The forward function is the code that takes an input and produce an output. \n",
+    "    def forward(self, x):\n",
+    "        #compute the convolutions at the current scale\n",
+    "        full_scale_result = self.in_model(x) #(B, C, W, H)\n",
+    "        #check if we have a bottleneck to apply\n",
+    "        if self.bottleneck is not None:\n",
+    "            #(B, C, W, H) shape because bottleneck does both the pooling & expansion\n",
+    "            bottle_result = self.bottleneck(full_scale_result)\n",
+    "            #Now shape (B, 2*C, W, H)\n",
+    "            full_scale_result = torch.cat([full_scale_result, bottle_result], dim=1)\n",
+    "        #compute the output on the concatenated (or not!) result\n",
+    "        return self.out_model(full_scale_result)\n"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "A class implementing a “Block” of the U-Net approach. Each block needs to know how many channels are coming in and out of the block. The block has three components. \n",
+    "\n",
+    "1) the input network, what processes the raw input coming into this block. \n",
+    "2) the bottleneck, which is what the block runs after shrinking the current results down by a factor of 2, and then expands the result back up to the original size. \n",
+    "\n",
+    "3) the output network, which is run on the results from the prior two sub-networks concatenated together. "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 22,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "ba81cd3fcd4544e9ac5eb537b5b586df",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Epoch:   0%|          | 0/10 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "6880d03ced5b4e8ea1b7483b2decb965",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/32 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stderr",
+     "output_type": "stream",
+     "text": [
+      "<ipython-input-6-711c7e87d554>:16: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning dissapear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "  img = imread(img_path)[:,:,0:3]#trim off the alpha so we get (W, H, 3)\n",
+      "<ipython-input-6-711c7e87d554>:23: DeprecationWarning: Starting with ImageIO v3 the behavior of this function will switch to that of iio.v3.imread. To keep the current behavior (and make this warning dissapear) use `import imageio.v2 as imageio` or call `imageio.v2.imread` directly.\n",
+      "  masks = [imread(f)/255.0 for f in mask_imgs]\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0c8962e9261e432bb6f668d45c0dc030",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating:   0%|          | 0/11 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b90fb10717134b55860ca62a4ed0dd08",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/32 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "4567e9ef1d4442f5aeee0ee9bb7d3d85",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating:   0%|          | 0/11 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "d356c645b38b4354984022ed3f9017bc",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/32 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "b1a0caa94f76435ca792b2d54ad6dc87",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating:   0%|          | 0/11 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "faf064c315cc4cd29e4e4ca989477555",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/32 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "1386b5995e3a41c0837487dda8c8854f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating:   0%|          | 0/11 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e4b58dd64d764a9da975c891c940d725",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/32 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "29cc0545678b463eae0b93ac8f254d90",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating:   0%|          | 0/11 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "7a8a00da2ee04aed919f46049e34c132",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/32 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "0a479dd13ff84bde92ef9cb1ceb557e9",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating:   0%|          | 0/11 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a967a4028eb6420ea72e3e6c577d2ed7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/32 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "354eacbd78b94c6c934222cbe550a6bb",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating:   0%|          | 0/11 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "c79f158731a549fe88748f422b9f9029",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/32 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "08c465b8405a49529fd6027ae31965b7",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Validating:   0%|          | 0/11 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "e928487a945e471785a82e9b6e42ff1d",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Training:   0%|          | 0/32 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    }
+   ],
+   "source": [
+    "unet_model = nn.Sequential(\n",
+    "    UNetBlock2d(3, 32, layers=2, sub_network=\n",
+    "        UNetBlock2d(32, 64, out_channels=32, layers=2, sub_network=\n",
+    "            UNetBlock2d(64, 128, out_channels=64, layers=2)\n",
+    "        ),\n",
+    "    ),\n",
+    "    #Prediction for _every_ location\n",
+    "    nn.Conv2d(32, 1, (3,3), padding=1), #Shape is now (B, 1, W, H)\n",
+    ")\n",
+    "\n",
+    "unet_results = train_network(unet_model, \n",
+    "                             loss_func, \n",
+    "                             train_seg_loader, \n",
+    "                             epochs=10, \n",
+    "                             device=device, \n",
+    "                             val_loader=test_seg_loader)"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
+   "source": [
+    "sns.lineplot(x='epoch', y='val loss', data=seg_results, label='CNN')\n",
+    "sns.lineplot(x='epoch', y='val loss', data=seg_results2, label='CNN w/ transposed-conv')\n",
+    "sns.lineplot(x='epoch', y='val loss', data=unet_results, label='UNet')"
+   ]
+  },
+  {
+   "attachments": {},
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Object detection with bounding boxes - Region-Based Convolutional Neural Network"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
    "source": []
   }
  ],
